...
                                    .clipShape(Circle())
                                    .padding(viewModel.selectedColor == color ? 10 : 0)
                            )
                            .onTapGesture {
                                viewModel.onColorPressed(color: color)
                            }
                            .accessibilityIdentifier("ColorCircle")
                    }
                }, header: {
                    Text("Select a profile color")
                        .font(.headline)
                })
            }
        )
    }
    
    private func ctaButton(selectedColor: Color) -> some View {
            Text("Continue")
                .callToActionButton()
                .accessibilityIdentifier("ContinueButton")
                .anyButton(.press) {
                    viewModel.onContinuePressed(selectedColor: selectedColor, path: $path)
                }
    }
}

...
