...
            List {
                accountSection
                purchaseSection
                applicationSection
            }
            .environment(\.defaultMinListRowHeight, 0)
            .navigationTitle("Settings")
            .screenAppearAnalytics(name: "SettignsScreen")
            .showCustomAlert(type: .confirmationDialog, alert: $viewModel.showCreateAccountMenu)
            .sheet(isPresented: $viewModel.showAppleProvider, onDismiss: {
                viewModel.setAnonymousAccountStatus()
            }, content: {
                CreateAccountWithAppleView(viewModel: .init(interactor: CoreInteractor(container: container)))
...
                    .rowFormatting()
                    .anyButton(.highlight) {
                        viewModel.onCreateAccountPressed()
                    }
                    .removeListRowFormatting()
            } else {
                Text("Sign out")
                    .rowFormatting()
                    .anyButton(.highlight) {
                        viewModel.onSignOutPressed {
                            await dismissScreen()
                        }
                    }
...
